argcd-apps/oauth2-proxy/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
