argcd-apps/oauth2-proxy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  host: df-sim.apps-crc.testing
  port:
    targetPort: http
  to:
    kind: Service
    name: oauth2-proxy
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
